# rss-maker

./: .mise.toml  README.md  audee_rss.xml  make_rss.py  pyproject.toml
.gemini/: config.json
.github/workflows/: publish.yml
docs/: audee_rss.xml  ij_matome_updates_rss.xml  jfn_pods_voice_rss.xml
src/rss_maker/: __init__.py  generate_rss.py
tests/fixtures/: audee_program_page.html  ij-matome_program_page.html  jfn_pods_voice_page.html
tests/rss_maker/: test_bitfan_generate_rss.py  test_generate_rss.py
