[project]
name = "rss-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TAKE Takashi", email = "take.t.public@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "feedgenerator==2.2.0",
    "requests==2.32.4",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
